force-app/main/default/objects/Program_Candidate__c/Program_Candidate__c.object-meta.xml
<CustomObject>
    <description>Represents a candidate for enrollment into post-prescription support programs. Used for phone-based enrollment where patients call in after receiving a prescription and AI agents capture candidate information through conversation to enroll them in support programs.</description>
    <label>Program Candidate</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Program Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>