force-app/main/default/objects/Program_Candidate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account if the candidate is associated with an organization. Use accountName parameter to resolve by name. System should use best judgement to match by phone/email when creating records. This is optional - candidates can exist without an Account.</description>
    <inlineHelpText>Link this program candidate to an Account if the candidate is associated with an organization. This is optional - candidates can exist without an Account. The system will attempt to match by phone/email when creating records.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Candidates</relationshipLabel>
    <relationshipName>Program_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>