force-app/main/default/objects/Program_Candidate__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <description>Annual household income range. Captured for financial eligibility assessment. No automatic calculation - just data capture for review. Query availableFieldsJson to see valid values.</description>
    <inlineHelpText>Select the annual household income range. This is used for financial eligibility assessment. Select the range that best matches the candidate's household income.</inlineHelpText>
    <label>Annual Income</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Less_Than_25000</fullName>
                <label>Less than $25,000</label>
            </value>
            <value>
                <fullName>25000_to_49999</fullName>
                <label>$25,000 - $49,999</label>
            </value>
            <value>
                <fullName>50000_to_74999</fullName>
                <label>$50,000 - $74,999</label>
            </value>
            <value>
                <fullName>75000_to_99999</fullName>
                <label>$75,000 - $99,999</label>
            </value>
            <value>
                <fullName>100000_to_149999</fullName>
                <label>$100,000 - $149,999</label>
            </value>
            <value>
                <fullName>150000_to_199999</fullName>
                <label>$150,000 - $199,999</label>
            </value>
            <value>
                <fullName>200000_to_249999</fullName>
                <label>$200,000 - $249,999</label>
            </value>
            <value>
                <fullName>250000_or_More</fullName>
                <label>$250,000 or more</label>
            </value>
            <value>
                <fullName>Prefer_Not_to_Answer</fullName>
                <label>Prefer not to answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>