force-app/main/default/objects/Program_Candidate__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the candidate resides. No validation required - just capture the information provided. Example: "San Francisco", "New York".</description>
    <inlineHelpText>Enter the city where the candidate resides (e.g., "San Francisco", "New York"). This is part of the complete address for mailing purposes.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>