force-app/main/default/objects/Program_Candidate__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of Birth in YYYY-MM-DD format. Use to calculate age for eligibility determination. Capture during phone enrollment. Format examples: 1980-05-15, 1995-12-25.</description>
    <inlineHelpText>Enter the candidate's date of birth in YYYY-MM-DD format (e.g., 1980-05-15). This is used to calculate age for eligibility determination.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>