force-app/main/default/objects/Program_Candidate__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>Current status in the enrollment process. Records typically start in 'New Inquiry' when the patient first calls. Use Lightning Path to track progress through enrollment. Valid values: New Inquiry (default), Information Gathering, Eligibility Review, Approved, Enrollment Pending, Enrolled, Declined, On Hold. Query availableFieldsJson to see all valid values.</description>
    <inlineHelpText>Select the current status in the enrollment process. Records typically start in "New Inquiry" when the patient first calls. Use the Lightning Path on the record page to visualize progress. Field history is tracked for audit purposes.</inlineHelpText>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Inquiry</fullName>
                <default>true</default>
                <label>New Inquiry</label>
            </value>
            <value>
                <fullName>Information Gathering</fullName>
            </value>
            <value>
                <fullName>Eligibility Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Enrollment Pending</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>