force-app/main/default/objects/Program_Candidate__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name of the program candidate. Capture when caller provides their first name during phone enrollment. This is typically one of the first pieces of information gathered.</description>
    <inlineHelpText>Enter the candidate's first name (given name). This is typically captured early in the phone enrollment conversation.</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>