force-app/main/default/objects/Program_Candidate__c/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <description>Number of people in the candidate's household. Captured for eligibility determination. No automatic calculation - just data capture for review. Query availableFieldsJson to see valid values.</description>
    <inlineHelpText>Select the total number of people in the candidate's household. This is used for eligibility determination and program capacity planning.</inlineHelpText>
    <label>Household Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8_or_More</fullName>
                <label>8 or more</label>
            </value>
            <value>
                <fullName>Prefer_Not_to_Answer</fullName>
                <label>Prefer not to answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>