force-app/main/default/objects/Program_Candidate__c/fields/Insurance_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_Number__c</fullName>
    <description>Insurance group number if applicable. Often required for claims processing. Key information to capture during enrollment. This is typically found on the insurance card as "Group Number" or "Group #".</description>
    <inlineHelpText>Enter the insurance group number if applicable (typically labeled as "Group Number" or "Group #" on the insurance card). This is often required for claims processing and billing coordination.</inlineHelpText>
    <label>Insurance Group Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>