force-app/main/default/objects/Program_Candidate__c/fields/Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number__c</fullName>
    <description>Insurance policy or member ID number. Used for verification and billing coordination. Key information to capture during enrollment. This is typically found on the insurance card as "Member ID" or "Policy Number".</description>
    <inlineHelpText>Enter the insurance policy or member ID number from the candidate's insurance card. This is typically labeled as "Member ID" or "Policy Number" on the insurance card. Used for verification and billing coordination.</inlineHelpText>
    <label>Insurance Policy Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>