force-app/main/default/objects/Program_Candidate__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <description>Name of the health insurance provider. Example: 'Blue Cross Blue Shield', 'Aetna', 'Medicare'. This is a key segment of information the AI agent should capture during enrollment. Insurance information is critical for program enrollment.</description>
    <inlineHelpText>Enter the name of the candidate's health insurance provider (e.g., "Blue Cross Blue Shield", "Aetna", "Medicare", "UnitedHealthcare"). This is a key piece of information to capture during enrollment for verification and billing coordination.</inlineHelpText>
    <label>Insurance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>