force-app/main/default/objects/Program_Candidate__c/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <description>Preferred language for communication. Important for providing materials in the correct language. Valid values: English (default), Spanish, French, German, Other. Query availableFieldsJson to see all valid values.</description>
    <inlineHelpText>Select the candidate's preferred language for communications and program materials. Defaults to English. This ensures materials are provided in the correct language.</inlineHelpText>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>