force-app/main/default/objects/Program_Candidate__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal or ZIP code for the candidate's address. No validation required - just capture the information provided. Example: "94105", "K1A 0B1".</description>
    <inlineHelpText>Enter the postal or ZIP code for the candidate's address (e.g., "94105" for US ZIP codes, "K1A 0B1" for Canadian postal codes). This is part of the complete address for mailing purposes.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>