force-app/main/default/objects/Program_Candidate__c/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>Preferred method for contacting the candidate. Ask which method they prefer during enrollment. Valid values: Phone, Email, Text, Mail. Query availableFieldsJson to see all valid values.</description>
    <inlineHelpText>Select the candidate's preferred method for future communications. Options: Phone, Email, Text (SMS), or Mail. Ask the candidate which method they prefer during the enrollment call.</inlineHelpText>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>