force-app/main/default/objects/Program_Candidate__c/recordTypes/Program_Candidate_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Program_Candidate_Enrollment</fullName>
    <active>true</active>
    <description>Default record type for program candidate enrollment process</description>
    <label>Program Candidate Enrollment</label>
</RecordType>