force-app/main/default/objects/Program_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Enrollment_Status__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Date_of_Birth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Program Candidates</label>
</ListView>